# interlinear-bible-simple-editor

./: .babelrc  .eslintrc.json  .gitignore  .prettierrc.json  CHANGELOG  README.md  copyright.txt  forge.config.js  index.html  jest.config.js  package.json  pnpm-lock.yaml  todo.md  tsconfig.json  vite.config.ts  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js  webpack.web.config.js
.build/: webpack.dev.config.js  webpack.main.config.js  webpack.resolve.js  webpack.web.config.js
assets/: fonts.css
data/: README.md  byzparsed-copyright  extra-dictionary.json  strongs-dictionary.json  strongs-greek-dictionary.json  strongs-roots.json  strongs-with-families.json
docs/: CNAME  main.js
gh-page/: index.html  main.js.LICENSE.txt
ibse.benihyangbaik.com/: dependOn.js  dependOn.js.LICENSE.txt  import.js  main.js
ise.benihyangbaik.com/: index.html
public/: dependOn.js  dependOn.js.LICENSE.txt  import.js  index.html
src/: App.tsx  README.md  desktop.tsx  dev.tsx  fonts.d.ts  index.css  index.html  index.ts  index.tsx  renderer.tsx  styles.ts  type.d.ts  web.css  web.html  web.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file.rs  git.rs  main.rs  path.rs  response.rs
src/contexts/: BibleDataContext.tsx  BibleDataReducer.ts  LexiconEntryDialogContext.tsx  LoadedBibleContext.tsx  StrongsEntryDialogContext.tsx
src/state/: LoadedBibleContext.tsx  loadedBibleReducer.ts
src/stores/: BibleDataActions.ts  BibleDataStore.ts  BibleDataStore.tsx  LexiconEntryDialogActions.ts  bibleDataStore.ts  (+4 more)
(+157 files in other folders)
